# calendar

./: .gitignore  CMakeLists.txt  README.md  cnow_uninstall.sh  config.h.in
inc/: calendar.h  config.h  csvutils.h  lunar_jieqi.txt
include/: calendar.h  config.h
source/: lunar_festival.csv  solar_festival.csv
src/: calendar.c  csvutils.c  data.c  main.c
